% height caused overflow with textContainer, set height to fixed height, issue solved

--- a/main.css
+++ b/main.css
@@ -20,7 +20,6 @@ body {
     /* IE 10 */
     justify-content: center;
     margin: auto;
-    border: 1px solid red;
 }
 
 #textContainer {
@@ -40,7 +39,6 @@ body {
     height: 500px;
     margin: auto;
     gap: 10px;
-    border: 1px solid blue;
 }
 
 #gridContainer {
@@ -51,7 +49,6 @@ body {
     width: 70%;
     margin: auto;
     background-color: #fff;
-    border: 1px solid green;
 }
 
 .button {
@@ -75,7 +72,7 @@ body {
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 940px) {
     #container {
         -webkit-box-orient: vertical;
         /* Safari */
